--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -148,9 +148,9 @@ $$
 
 :::{.callout-note}
 ## Note
-[Bressoud](http://www.math.harvard.edu/~knill/teaching/math1a_2011/exhibits/bressoud/) notes that Gregory (1668) proved this formula for arc length of the graph of a function by showing that the length of the curve $f(x)$ is defined by the area under $\sqrt{1 + f'(x)^2}$. (It is commented that this was also known a bit earlier by von Heurat.) Gregory went further though, as part of the fundamental theorem of calculus was contained in his work.  Gregory then posed this inverse question: given a curve $y=g(x)$ find a function $u(x)$ so that the area under $g$ is equal to the length of the second curve. The answer given was $u(x) = (1/c)\int_a^x \sqrt{g^2(t) - c^2}$, which if $g(t) = \sqrt{1 + f'(t)^2}$ and $c=1$ says $u(x) = \int_a^x f(t)dt$.
+[Bressoud](http://www.math.harvard.edu/~knill/teaching/math1a_2011/exhibits/bressoud/) notes that Gregory (1668) proved this formula for arc length of the graph of a function by showing that the length of the curve $f(x)$ is defined by the area under $\sqrt{1 + f'(x)^2}$. (It is commented that this was also known a bit earlier by von Heurat.) Gregory went further though, as part of the fundamental theorem of calculus was contained in his work.  Gregory then posed this inverse question: given a curve $y=g(x)$ find a function $u(x)$ so that the area under $g$ is equal to the length of the second curve. The answer given was $u(x) = (1/c)\int_a^x \sqrt{g^2(t) - c^2}dt$, where $g(t) = \sqrt{1 + u'(t)^2}$ if $c=1$ says $\int_a^x\sqrt{1 + u'(t)^2}dt = \int_a^x g(t)dt$.
 
-An analogy might be a sausage maker. These take a mass of ground-up sausage material and return a long length of sausage. The material going in would depend on time via an equation like $\int_0^t g(u) du$ and the length coming out would be a constant (accounting for the cross section) times $u(t) = \int_0^t \sqrt{1 + g'(s)} ds$.
+An analogy might be a sausage maker. These take a mass of ground-up sausage material and return a long length of sausage. The material going in would depend on time via an equation like $\int_0^t g(u) du$ and the length coming out would be a constant (accounting for the cross section) times $\int_0^t \sqrt{1 + u'(s)^2} ds$.
 
 :::
 
@@ -483,7 +483,7 @@ What looks at first glance to be just a slightly more complicated equation is th
 
 \begin{align*}
 s(u) &= \int_0^u \sqrt{(-\sin(t))^2 + b\cos(t)^2} dt\\
-     &= \int_0^u \sqrt{\sin(t))^2 + \cos(t)^2 + c\cos(t)^2} dt  \\
+     &= \int_0^u \sqrt{\sin(t)^2 + \cos(t)^2 + c\cos(t)^2} dt  \\
 	 &=\int_0^u \sqrt{1 + c\cos(t)^2} dt.
 \end{align*}
 
@@ -521,7 +521,7 @@ Here we see visually that the new parameterization yields the same curve:
 g(t) = 𝒂 * cos(t)
 f(t) = 𝒃 * sin(t)
 
-plot(t -> g(𝒔(t)), t -> f(𝒔(t)), 0, 𝒔(2*pi))
+plot(t -> g(𝒔(t)), t -> f(𝒔(t)), 0, sinv(2*pi))
 ```
 
 #### Example: An implication of concavity
@@ -704,7 +704,7 @@ For the latter claim, integrating in the $y$ variable gives
 Now, the area under $h$ over $[u,c]$ is greater than that over $[c,v]$ as $(u+v)/2 < c$ or $v-c < c-u$. That means the area under $f$ over $[u,c]$ is greater than that over $[c,v]$.
 
 
-> There is more arc length for $f$over $[a,u]$ than $[v,b]$; more arc length for $f$ over $[u,c]$ than $[c,v]$. In particular more arc length over $[a,c]$ than $[c,b]$.
+> There is more arc length for $f$ over $[a,u]$ than $[v,b]$; more arc length for $f$ over $[u,c]$ than $[c,v]$. In particular more arc length over $[a,c]$ than $[c,b]$.
 
 
 
@@ -712,10 +712,10 @@ let $\phi(z) = f_2^{-1}(f_1(z))$ be the function taking $u$ to $v$, and $a$ to $
 
 
 $$
-f'(\phi(z)) \cdot \phi'(z) = f'(z) < 0
+f'(\phi(z)) \cdot \phi'(z) = f'(z) > 0
 $$
 
-or $\phi'(z) < 0$. Moreover, we have by the first assertion that $f'(z) < -f'(\phi(z))$ so $|\phi'(z)| = |f(z)/f'(\phi(z))| < 1$.
+or $\phi'(z) < 0$. Moreover, we have by the first assertion that $f'(z) < -f'(\phi(z))$ so $|\phi'(z)| = |f'(z)/f'(\phi(z))| < 1$.
 
 
 Using the substitution $x = \phi(z)$ gives:
@@ -732,7 +732,7 @@ Using the substitution $x = \phi(z)$ gives:
 \end{align*}
 
 
-Letting $h=f(u) \rightarrow c$ we get the *inequality*
+Letting $h=f(u \rightarrow c)$ we get the *inequality*
 
 
 $$
@@ -789,7 +789,7 @@ y''(t) &= -g - W(t,x(t), x'(t), y(t), y'(t)) \cdot y'(t)\\
 with initial conditions: $x(0) = y(0) = 0$ and $x'(0) = v_0 \cos(\theta), y'(0) = v_0 \sin(\theta)$.
 
 
-Only with certain drag forces, can this set of equations be be solved exactly, though it can be approximated numerically for admissible $W$, but if $W$ is strictly positive then it can be shown $x(t)$ is increasing on $[0, x_\infty)$ and so invertible, and $f(u) = y(x^{-1}(u))$ is three times differentiable with both $f$ and $f'$ being strictly concave, as it can be shown that (say $x(v) = u$ so $dv/du = 1/x'(v) > 0$):
+Only with certain drag forces, can this set of equations be solved exactly, though it can be approximated numerically for admissible $W$, but if $W$ is strictly positive then it can be shown $x(t)$ is increasing on $[0, x_\infty)$ and so invertible, and $f(u) = y(x^{-1}(u))$ is three times differentiable with both $f$ and $f'$ being strictly concave, as it can be shown that (say $x(v) = u$ so $dv/du = 1/x'(v) > 0$):
 
 
 
@@ -837,7 +837,7 @@ The length of the curve given by $f(x) = e^x$ between $0$ and $1$ is certainly l
 #| hold: true
 #| echo: false
 f(x) = exp(x)
-val = sqrt( (f(1) - f(0))^2 - (1 - 0)^2)
+val = sqrt( (f(1) - f(0))^2 + (1 - 0)^2)
 numericq(val)
 ```
 
@@ -888,7 +888,7 @@ A [pursuit](http://www-history.mcs.st-and.ac.uk/Curves/Pursuit.html) curve is a 
 #| echo: false
 f(x) = x^2 - log(x)
 a, b= 1/10, 2
-val, _ = quadgk( x -> sqrt(1 + (f)(x)^2), a, b)
+val, _ = quadgk( x -> sqrt(1 + D(f)(x)^2), a, b)
 numericq(val)
 ```
 
@@ -918,7 +918,7 @@ sqrt((tan(pi/4) - tan(-pi/4))^2 + (pi/4 - -pi/4)^2)
 ###### Question
 
 
-Find the length of the graph of the function $g(x) =\int_0^x \tan(x)dx$ between $0$ and $\pi/4$ by hand or numerically:
+Find the length of the graph of the function $g(x) =\int_0^x \tan(t)dt$ between $0$ and $\pi/4$ by hand or numerically:
 
 
 ```{julia}
@@ -981,7 +981,7 @@ f(x,a) = a * cosh(x/a)
 inside = 1 + diff(f(x,a), x)^2
 ```
 
-Just trying `integrate(sqrt(inside), x)` will fail, but if we try `integrate(sqrt(simplify(inside), x))` an antiderivative can be found. What is it?
+Just trying `integrate(sqrt(inside), x)` will fail, but if we try `integrate(sqrt(simplify(inside)), x)` an antiderivative can be found. What is it?
 
 
 ```{julia}
