--- a/quarto/precalc/numbers_types.qmd
+++ b/quarto/precalc/numbers_types.qmd
@@ -624,3 +624,23 @@ yesnoq(false)
 ```
 
 (This shows the special casing that is done when powers use literal numbers.)
+
+
+###### Question
+
+In [NewScientist](https://www.newscientist.com/article/2112537-smallest-sliver-of-time-yet-measured-sees-electrons-fleeing-atom/) we learn "For the first time, physicists have measured changes in an atom to the level of zeptoseconds, or trillionths of a billionth of a second – the smallest division of time yet observed."
+
+That is
+
+```{julia}
+1e-9 / 1e12
+```
+
+Finding the value through division introduces a floating point deviation. Which of the following values will directly represent a zeptosecond?
+
+```{julia}
+#| echo: false
+as = [`1/10^21`, `1e-21`]
+explanation = "The scientific notation is correct. Due to integer overflow `10^21` is not the same number as `10.0^21`."
+buttonq(as, 2; explanation=explanation)
+```
